tests/fail/expr/lit.rs
fn main() {
    one_assert::assert!("true");
    one_assert::assert!(1);
    one_assert::assert!(1u8);
    one_assert::assert!(0x01u8);
}
