tests/fail/expr/lit.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/lit.rs:2:25
  |
2 |     one_assert::assert!("true");
  |                         ^^^^^^ expected `bool`, found `&str`

error[E0308]: mismatched types
 --> tests/fail/expr/lit.rs:3:25
  |
3 |     one_assert::assert!(1);
  |                         ^ expected `bool`, found integer

error[E0308]: mismatched types
 --> tests/fail/expr/lit.rs:4:25
  |
4 |     one_assert::assert!(1u8);
  |                         ^^^ expected `bool`, found `u8`

error[E0308]: mismatched types
 --> tests/fail/expr/lit.rs:5:25
  |
5 |     one_assert::assert!(0x01u8);
  |                         ^^^^^^ expected `bool`, found `u8`
